[gd_scene load_steps=19 format=3 uid="uid://byhmbw73rxff0"]

[ext_resource type="Script" path="res://Entities/Player/Player.gd" id="1_c20lx"]
[ext_resource type="Texture2D" uid="uid://cu3b8021h5ehh" path="res://Assets/Images/travis.png" id="1_ugvms"]
[ext_resource type="Texture2D" uid="uid://caaubixch2xh2" path="res://Assets/Images/shadow.png" id="2_hcp8a"]
[ext_resource type="PackedScene" uid="uid://1l0tnvtlsbyc" path="res://Entities/Player/Overlay.tscn" id="2_qd76r"]
[ext_resource type="Texture2D" uid="uid://bk6d46sw1l7mx" path="res://Assets/Images/bucket.png" id="3_4a4p0"]
[ext_resource type="Shader" path="res://UI/Flash.gdshader" id="3_hjdxc"]
[ext_resource type="AudioStream" uid="uid://hvvrokmyrv12" path="res://Assets/Audio/Sounds/snd_place.ogg" id="8_qpgdo"]
[ext_resource type="PackedScene" uid="uid://djfd0et0mfqxe" path="res://Entities/Player/Bat.tscn" id="8_wessx"]
[ext_resource type="AudioStream" uid="uid://dpx7vlckej0fx" path="res://Assets/Audio/Sounds/snd_impact.ogg" id="9_hp8qq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ps8r1"]
shader = ExtResource("3_hjdxc")
shader_parameter/enabled = true
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_way62"]
size = Vector2(32, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejgmu"]
size = Vector2(60, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eivjl"]
size = Vector2(32, 10)

[sub_resource type="Animation" id="Animation_wcxix"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot/Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritePivot/Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpritePivot/Sprite:material:shader_parameter/enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpritePivot/Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shadow:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpritePivot/Sprite:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_huspc"]
resource_name = "change_expression"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 7.5), Vector2(0, -4), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.88889, 1.7541), Vector2(1.77778, 2.13115), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_qj434"]
resource_name = "flip"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -100), Vector2(0, 0), Vector2(0, 15), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -6.28319]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(4, 1.5), Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_2j31f"]
resource_name = "game_over"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpritePivot/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 2, 3, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpritePivot/Sprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritePivot/Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.7, 0.8, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 0.450625),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -3), Vector2(-12, -5), Vector2(0, 58)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritePivot/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.7, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 0.450625),
"update": 0,
"values": [Vector2(2, 2), Vector2(2, 2), Vector2(1.8, 2.2), Vector2(6, 0.1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpritePivot/Sprite:material:shader_parameter/enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SpritePivot/Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.9, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Shadow:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0.392157), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("SpritePivot/Sprite:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_etwch"]
_data = {
"RESET": SubResource("Animation_wcxix"),
"change_expression": SubResource("Animation_huspc"),
"flip": SubResource("Animation_qj434"),
"game_over": SubResource("Animation_2j31f")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 13
collision_mask = 13
script = ExtResource("1_c20lx")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.392157)
scale = Vector2(2, 2)
texture = ExtResource("2_hcp8a")

[node name="SpritePivot" type="Node2D" parent="."]
position = Vector2(0, -61)

[node name="BucketBack" type="Sprite2D" parent="SpritePivot"]
visible = false
position = Vector2(0, -34)
scale = Vector2(2, 2)
texture = ExtResource("3_4a4p0")
hframes = 3
frame = 2

[node name="Sprite" type="Sprite2D" parent="SpritePivot"]
material = SubResource("ShaderMaterial_ps8r1")
scale = Vector2(2, 2)
texture = ExtResource("1_ugvms")
hframes = 5

[node name="BucketFront" type="Sprite2D" parent="SpritePivot"]
visible = false
position = Vector2(0, -34)
scale = Vector2(2, 2)
texture = ExtResource("3_4a4p0")
hframes = 3
frame = 1

[node name="Bat" parent="." instance=ExtResource("8_wessx")]

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_way62")

[node name="HurtBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -32.5)
shape = SubResource("RectangleShape2D_ejgmu")
debug_color = Color(0.98275, 6.08854e-06, 1.54018e-06, 0.419608)

[node name="ShapeCast2D" type="ShapeCast2D" parent="."]
visible = false
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_eivjl")
target_position = Vector2(50, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_etwch")
}

[node name="Overlay" parent="." instance=ExtResource("2_qd76r")]
visible = false

[node name="Sounds" type="Node" parent="."]

[node name="Place" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_qpgdo")
volume_db = -10.0
bus = &"sfx"

[node name="Impact" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_hp8qq")
